[gd_scene load_steps=11 format=3 uid="uid://djwijp855w0gx"]

[ext_resource type="Script" uid="uid://dhqli7lsrdqdg" path="res://scripts/tutorial.gd" id="1_cq4me"]
[ext_resource type="PackedScene" uid="uid://duwsmjvwd6pk8" path="res://scenes/player.tscn" id="2_6yjpi"]
[ext_resource type="Script" uid="uid://s1exvqsr4rtr" path="res://scripts/camera_2d.gd" id="3_gbqnl"]
[ext_resource type="Texture2D" uid="uid://dnjm0hp680fle" path="res://assets/TileSet/Nature_environment_01.png" id="4_ckvwl"]
[ext_resource type="PackedScene" uid="uid://chkus4xclycai" path="res://scenes/enemy.tscn" id="5_nlqja"]
[ext_resource type="Script" uid="uid://cnj88tryrnxu4" path="res://tutorial_manager.gd" id="6_6yjpi"]
[ext_resource type="FontFile" uid="uid://cgiofxek16awx" path="res://assets/fonts/ByteBounce.ttf" id="6_gbqnl"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_lbhrr"]
friction = 1.5

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_p57ef"]
texture = ExtResource("4_ckvwl")
margins = Vector2i(16, 16)
texture_region_size = Vector2i(32, 32)
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, 4.1422, 16, 16, 2.86768, 16)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, -16, 16, 16, -16, 16, -16, 6.69125, 5.09809, -16)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -0.63726, 0.637264, -16, 16, -16, 16, 16, -16, 16)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 0.637264, -16, 16, -16, 16, 16, -16, 16)
10:0/0 = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, 0.63726, 16, 16, -16, 16, -16, -16, 0, -16)
11:0/0 = 0
11:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5.73535, 9.87755, -0.63726, 16, -16, 16, -16, 0, -10.5148, 6.05399)
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(16, -16, 16, 16, -16, 16, -16, 2.54905, 6.69125, -16)
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
11:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, 0.955891, 16, 16, -16, 16)
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:3/0 = 0
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, 0.955891, 16, 16, -16, 16)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, -16, 16, 16, -16, 16)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, -16, 16, 16, -16, 16)
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, -16, 16, 16, -16, 16)
8:3/0 = 0
9:3/0 = 0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, -16, 16, 16, -16, 16)
10:3/0 = 0
10:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, -16, 16, 16, -16, 16)
11:3/0 = 0
11:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, -16, 16, 16, -16, 16)
12:3/0 = 0
13:3/0 = 0
13:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -10.5148, -1.91179, -16, 16, -16, 16, 16, -16, 16)
15:3/0 = 0
15:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -0.955893, 16, -10.1962, 16, 11.1521, 16, 16, -16, 16)
16:3/0 = 0
16:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -0.955893, 16, -10.1962, 16, 11.1521, 16, 16, -16, 16)
17:3/0 = 0
17:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -11.7893, 0.955894, -16, 16, -10.5148, 16, 16, -16, 16)
18:3/0 = 0
18:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -11.7893, 0, -6.69125, 16, -1.59315, 16, 16, -16, 16)
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, -16, 16, 16, -16, 16)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, -16, 16, 16, -16, 16)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, -16, 16, 16, -16, 16)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, -16, 16, 16, -16, 16)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, -16, 16, 16, -16, 16)
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, -16, 16, 16, -16, 16)
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, -16, 16, 16, -16, 16)
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, -16, 16, 16, -16, 16)
8:4/0 = 0
8:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, -16, 16, 16, -16, 16)
9:4/0 = 0
9:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, -16, 16, 16, -16, 16)
10:4/0 = 0
10:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, -16, 16, 16, -16, 16)
11:4/0 = 0
11:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, -16, 16, 16, -16, 16)
12:4/0 = 0
12:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -1.27452, 16, -10.5148, 16, 0.955891, 16, 16, -16, 16)
13:4/0 = 0
13:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -1.27452, 16, -10.5148, 16, 0.955891, 16, 16, -16, 16)
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
19:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -0.63726, 0, 4.1422, 16, 9.55892, 16, 16, -16, 16)
20:4/0 = 0
20:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 5.73536, -16, 16, -10.5148, 16, 16, -16, 16)
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, -16, 16, 16, -16, 16)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, -16, 16, 16, -16, 16)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, -16, 16, 16, -16, 16)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, -16, 16, 16, -16, 16)
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, -16, 16, 16, -16, 16)
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, -16, 16, 16, -16, 16)
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, -16, 16, 16, -16, 16)
7:5/0 = 0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, -16, 16, 16, -16, 16)
8:5/0 = 0
8:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, -16, 16, 16, -16, 16)
9:5/0 = 0
9:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, -16, 16, 16, -16, 16)
10:5/0 = 0
10:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, -16, 16, 16, -16, 16)
11:5/0 = 0
11:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, -16, 16, 16, -16, 16)
12:5/0 = 0
12:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, -16, 16, 16, -16, 16)
13:5/0 = 0
13:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, -16, 16, 16, -16, 16)
14:5/0 = 0
14:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, -16, 16, 16, -16, 16)
15:5/0 = 0
15:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, -16, 16, 16, -16, 16)
16:5/0 = 0
16:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, -16, 16, 16, -16, 16)
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
29:5/0 = 0
30:5/0 = 0
31:5/0 = 0
32:5/0 = 0
0:6/0 = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:6/0 = 0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:6/0 = 0
5:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:6/0 = 0
6:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
7:6/0 = 0
7:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:6/0 = 0
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:6/0 = 0
9:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
10:6/0 = 0
10:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
11:6/0 = 0
11:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
12:6/0 = 0
12:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
13:6/0 = 0
13:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
14:6/0 = 0
14:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
15:6/0 = 0
15:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
16:6/0 = 0
16:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
17:6/0 = 0
17:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
27:6/0 = 0
28:6/0 = 0
29:6/0 = 0
30:6/0 = 0
31:6/0 = 0
32:6/0 = 0
0:7/0 = 0
0:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:7/0 = 0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:7/0 = 0
2:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
30:7/0 = 0
31:7/0 = 0
32:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
25:8/0 = 0
26:8/0 = 0
27:8/0 = 0
28:8/0 = 0
29:8/0 = 0
30:8/0 = 0
31:8/0 = 0
32:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
23:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, -16, 16, 16, -16, 16)
24:9/0 = 0
24:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 0.31863, 0, 0.31863, 16, 0, 16, 16, -16, 16)
25:9/0 = 0
25:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 0.31863, 0, 0.31863, 16, 0, 16, 16, -16, 16)
26:9/0 = 0
26:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 0.31863, 0, 0.31863, 16, 0, 16, 16, -16, 16)
27:9/0 = 0
27:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, 0.31863, 0, 0.31863, 16, 0, 16, 16, -16, 16)
28:9/0 = 0
28:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 1.27452, -16, 16, -16, 16, 16, -9.55892, 16)
29:9/0 = 0
29:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 1.27452, -16, 16, -16, 16, 16, -16, 16)
30:9/0 = 0
30:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 1.27452, -16, 16, -16, 16, 16, -16, 16)
31:9/0 = 0
31:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 1.27452, -16, 16, -16, 16, 16, -16, 16)
32:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
12:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -11.1521, 2.54905, -5.41672, 16, -1.27452, 16, 16, -16, 16)
13:10/0 = 0
13:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -13.3825, 2.54905, -12.7452, 16, -12.4266, 16, 0.31863, -16, 0.31863)
14:10/0 = 0
14:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -13.3825, 2.54905, -12.7452, 16, -12.4266, 16, 0.31863, -16, 0.31863)
15:10/0 = 0
15:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -13.3825, 2.54905, -12.7452, 16, -12.4266, 16, 0.31863, -16, 0.31863)
16:10/0 = 0
16:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -13.3825, 2.54905, -12.7452, 16, -12.4266, 16, 0.31863, -16, 0.31863)
17:10/0 = 0
17:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -13.3825, 2.54905, -12.7452, 16, -12.4266, 16, 0.31863, -16, 0.31863)
18:10/0 = 0
18:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, -16, 16, 16, -16, 16)
19:10/0 = 0
19:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, -16, 16, 16, -16, 16)
20:10/0 = 0
20:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, -16, 16, 16, -16, 16)
21:10/0 = 0
21:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, -16, 16, 16, -16, 16)
22:10/0 = 0
22:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, -0.31863, -16, 16, -16, 16, 16, -16, 16)
23:10/0 = 0
24:10/0 = 0
25:10/0 = 0
26:10/0 = 0
27:10/0 = 0
28:10/0 = 0
29:10/0 = 0
30:10/0 = 0
31:10/0 = 0

[sub_resource type="TileSet" id="TileSet_lbhrr"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
physics_layer_0/physics_material = SubResource("PhysicsMaterial_lbhrr")
sources/0 = SubResource("TileSetAtlasSource_p57ef")

[node name="Tutorial" type="Node2D"]
position = Vector2(577, 324)
script = ExtResource("1_cq4me")

[node name="Player" parent="." instance=ExtResource("2_6yjpi")]
position = Vector2(-545, 222)

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(111, -45)
zoom = Vector2(2, 1.867)
process_callback = 0
position_smoothing_enabled = true
position_smoothing_speed = 3.0
script = ExtResource("3_gbqnl")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="TileMap" type="TileMap" parent="StaticBody2D"]
position = Vector2(3, -11)
tile_set = SubResource("TileSet_lbhrr")
format = 2
layer_0/name = "Mid"
layer_0/tile_data = PackedInt32Array(589806, 589824, 6, 589807, 786432, 6, 589808, 786432, 6, 589809, 786432, 6, 589810, 786432, 6, 589811, 786432, 6, 589812, 786432, 6, 589813, 786432, 6, 589814, 786432, 6, 589815, 786432, 6, 589816, 786432, 6, 589817, 786432, 6, 589818, 1114112, 6, 655342, 393216, 7, 655343, 786432, 7, 655344, 786432, 7, 655345, 786432, 7, 655346, 786432, 7, 655347, 786432, 7, 655348, 786432, 7, 655349, 786432, 7, 655350, 786432, 7, 655351, 786432, 7, 655352, 786432, 7, 655353, 786432, 7, 655354, 1114112, 7, 720878, 393216, 7, 720890, 1114112, 7, 720879, 720896, 7, 720880, 720896, 7, 720881, 720896, 7, 720882, 720896, 7, 720883, 720896, 7, 720884, 720896, 7, 720885, 720896, 7, 720886, 1048576, 4, 720887, 720896, 7, 720888, 720896, 7, 720889, 720896, 7, 786414, 393216, 7, 786415, 720896, 8, 786416, 720896, 8, 786417, 720896, 8, 786418, 720896, 8, 786419, 720896, 8, 786420, 720896, 8, 786421, 720896, 8, 786422, 720896, 8, 786423, 720896, 8, 786424, 720896, 8, 786425, 720896, 8, 786426, 1114112, 7)

[node name="Enemies" type="Node2D" parent="."]

[node name="Enemy" parent="." instance=ExtResource("5_nlqja")]
position = Vector2(-353, 220)
slide_on_ceiling = false

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(194, 531)
scale = Vector2(0.190586, 0.190586)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TutorialUI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TutorialText" type="Label" parent="CanvasLayer/TutorialUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_gbqnl")
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/TutorialUI/TutorialText"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0, 0, 0, 0.5)

[node name="TutorialManager" type="Node" parent="."]
script = ExtResource("6_6yjpi")
